Added the Optional Content

--- a/mod3-solution/index.html
+++ b/mod3-solution/index.html
@@ -32,9 +32,9 @@
      </div><!-- navbar header --> 
         <div id="collapsable" class="collapse navbar-collapse">
     		<ul id="nav-list" class="nav navbar-nav visible-xs">
-    			<li><a href="#">Chicken</a></li>
-    			<li><a href="#">Beef</a></li>
-    			<li><a href="#">Shushi</a></li>
+    			<li><a href="#Chicken">Chicken</a></li>
+    			<li><a href="#Beef">Beef</a></li>
+    			<li><a href="#Shushi">Shushi</a></li>
     		</ul> <!-- #nav-list -->
     	</div><!-- #collapsable -->   	
     </div><!-- container fluid -->
@@ -43,7 +43,7 @@
   <!-- Main content -->
   <div class="container-fluid">
   	<h1 class="text-center">Our Menu</h1>
-  	<div id="Chicken" class="col-xs-12">
+  	<div id="Chicken" class="food col-md-4 col-sm-6 col-xs-12">
   		<h3 class="text-center">Chicken</h3>
   		<p id="dummy-text">
   		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -70,6 +70,18 @@
   		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
   		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
   		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  		<a href="#header-nav">Back to top</a>
+  		</p>
+  	</div>
+  	<div id="Beef" class="food col-md-4 col-sm-6 col-xs-12">
+  		<h3 class="text-center">Beef</h3>
+  		<p id="dummy-text">
+  		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat nlg
+  		prmddent, sunt in culpa qui officia deserunt mollit anim id est laborum.
   		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -88,6 +100,37 @@
   		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
   		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
   		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  		<a href="#header-nav">Back to top</a>
+  		</p>
+  	</div>
+  	<div id="Shushi" class="food col-md-4 col-sm-12 col-xs-12">
+  		<h3 class="text-center">Shushi</h3>
+  		<p id="dummy-text">
+  		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  		<a href="#header-nav">Back to top</a>
   		</p>
   	</div>
   </div>
